# phoebe-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.docker.toml  config.toml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
phoebe_server/: __init__.py  cli.py  config.py  database.py  main.py
phoebe_server/api/: auth.py  command.py  health.py  session.py  system.py
phoebe_server/auth/: __init__.py  api_key.py  dependencies.py  jwt_auth.py  passwords.py
phoebe_server/manager/: __init__.py  session_manager.py
phoebe_server/worker/: phoebe_worker.py  proxy.py
tests/: test_api.py  test_auth.py  test_database.py
